--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
     <button id="btn">Chơi lại</button>
     <p id="ptn">0</p>
-    <img src="./images/348363267_1412276596227079_4458074379618220961_n-removebg-preview.png" alt="bird" id="bird" style="display: none;">
+    <img src="./images/pngegg.png" alt="bird" id="bird" style="display: none;">
     <script src="fly.js"></script>
 </body>
 
