--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
     <button id="btn">Chơi lại</button>
     <p id="ptn">0</p>
-    <img src="./images/pngegg.png" alt="bird" id="bird" style="display: none;">
+    <img src="./images/anhHuy.jpg" alt="bird" id="bird" style="display: none; height: 200%">
     <script src="fly.js"></script>
 </body>
 
